Documentation edits made through Mintlify web editor

--- a/brz_flow/BRZ.mdx
+++ b/brz_flow/BRZ.mdx
@@ -9,35 +9,47 @@ O BRZ é a principal stablecoin brasileira na blockchain Flow, mantendo paridade
 
 ## Características
 
-- **Pareamento 1:1 com Real Brasileiro**
-- **Totalmente lastreada e auditada**
-- **Compatível com padrão FungibleToken da Flow**
-- **Suporte multi-chain**
+* **Pareamento 1:1 com Real Brasileiro**
+
+* **Totalmente lastreada e auditada**
+
+* **Compatível com padrão FungibleToken da Flow**
+
+* **Suporte multi-chain**
 
 ## Como Funciona
 
 O BRZ na Flow opera através de um smart contract que segue o padrão FungibleToken, permitindo:
 
-- **Transferências entre contas**
-- **Integração com dApps**
-- **Consulta de saldos**
-- **Operações de mint e burn controladas**
+* **Transferências entre contas**
+
+* **Integração com dApps**
+
+* **Consulta de saldos**
+
+* **Operações de mint e burn controladas**
 
 ## Casos de Uso
 
 ### DeFi
 
-- **Empréstimos**
-- **Yield farming**
-- **Pools de liquidez**
-- **Staking**
+* **Empréstimos**
+
+* **Yield farming**
+
+* **Pools de liquidez**
+
+* **Staking**
 
 ### Pagamentos
 
-- **Transferências P2P**
-- **Integrações comerciais**
-- **Remessas internacionais**
-- **Pagamentos em dApps**
+* **Transferências P2P**
+
+* **Integrações comerciais**
+
+* **Remessas internacionais**
+
+* **Pagamentos em dApps**
 
 ## Começando
 
@@ -63,27 +75,30 @@ transaction(amount: UFix64, recipient: Address) {
 
 ## Recursos
 
-- [Site Oficial BRZ](https://www.brztoken.io)
-- [Documentação Flow](https://docs.onflow.org)
-- [GitHub BRZ](https://github.com/transfero-automated-finance)
+* [Site Oficial BRZ](https://www.brztoken.io)
+
+* [Documentação Flow](https://docs.onflow.org)
+
+* [GitHub BRZ](https://github.com/transfero-automated-finance)
 
 ## Segurança
 
 O BRZ mantém seu lastro em instituições financeiras regulamentadas e passa por auditorias regulares. Na blockchain Flow, o contrato segue as melhores práticas de segurança e é auditado por empresas especializadas.
 
----
+***
 
 Este arquivo MDX fornece uma documentação completa sobre o BRZ na Flow, incluindo:
 
-- Visão geral do token
-- Características principais
-- Exemplos de código
-- Casos de uso
-- Recursos e links importantes
-- Informações de segurança
+* Visão geral do token
+
+* Características principais
+
+* Exemplos de código
+
+* Casos de uso
+
+* Recursos e links importantes
+
+* Informações de segurança
 
 O formato MDX permite que este conteúdo seja facilmente integrado em documentações técnicas e sites, com suporte a markdown e componentes React quando necessário.
-
-```
-
-```
