Documentation edits made through Mintlify web editor

--- a/brz_flow/BRZ.mdx
+++ b/brz_flow/BRZ.mdx
@@ -1,36 +1,40 @@
 ---
-title: "BRZ Token na Flow"
-description: "Guia completo sobre a stablecoin brasileira BRZ na blockchain Flow"
+title: "BRZ na Flow"
+description: "Guia completo sobre a stablecoin brasileira BRZ na Flow blockchain"
 ---
 
-# BRZ Token na Flow
+# O BRZ é a principal stablecoin brasileira na Flow blockchain.&#x20;
 
-O que é isso? O BRZ é a principal stablecoin brasileira na blockchain Flow. Suas principais características incluem:
+* **Paridade 1:1 com o Real Brasileiro (BRL)**
 
-- **Paridade 1:1 com o Real Brasileiro (BRL)**
-- **Totalmente lastreada e auditada**
-- **Compatível com o padrão FungibleToken da Flow**
-- **Suporte multi-chain**
+* **Totalmente lastreada e auditada**
+
+* **Compatível com o padrão FungibleToken da Flow**
+
+* **Suporte multi-chain**
 
 O BRZ na Flow opera através de um smart contract que permite:
 
-- **Transferências entre contas**
-- **Integração com dApps**
-- **Consulta de saldos**
-- **Operações de mint e burn controladas**
+* **Transferências entre contas**
+
+* **Integração com dApps**
+
+* **Consulta de saldos**
+
+* **Operações de mint e burn controladas**
 
 Alguns casos de uso comuns para o BRZ incluem:
 
 ### DeFi
 
-- **Empréstimos**
-- **Yield farming**
-- **Pools de liquidez**
-- **Staking**
+* **Pools de liquidez**
 
 ### Pagamentos
 
-- **Transferências P2P**
-- **Integrações comerciais**
-- **Remessas internacionais**
-- **Pagamentos em dApps**
+* **Transferências P2P**
+
+* **Integrações comerciais**
+
+* **Remessas internacionais**
+
+* **Pagamentos em dApps**
