--- a/brz_flow/BRZ-es.mdx
+++ b/brz_flow/BRZ-es.mdx
@@ -1,5 +1,5 @@
 ---
-title: "BRZ en Flow"
+title: "BRZ en Flow 🇺🇸"
 description: "Guía completa sobre la stablecoin brasileña BRZ en la blockchain Flow"
 ---
 
