--- a/brz_flow/BRZ-pt.mdx
+++ b/brz_flow/BRZ-pt.mdx
@@ -1,40 +1,40 @@
 ---
-title: "BRZ na Flow"
+title: "BRZ na Flow 🇦🇷 🇨🇱"
 description: "Guia completo sobre a stablecoin brasileira BRZ na Flow blockchain"
 ---
 
 # O BRZ é a principal stablecoin brasileira na Flow blockchain.&#x20;
 
-* **Paridade 1:1 com o Real Brasileiro (BRL)**
+- **Paridade 1:1 com o Real Brasileiro (BRL)**
 
-* **Totalmente lastreada e auditada**
+- **Totalmente lastreada e auditada**
 
-* **Compatível com o padrão FungibleToken da Flow**
+- **Compatível com o padrão FungibleToken da Flow**
 
-* **Suporte multi-chain**
+- **Suporte multi-chain**
 
 O BRZ na Flow opera através de um smart contract que permite:
 
-* **Transferências entre contas**
+- **Transferências entre contas**
 
-* **Integração com dApps**
+- **Integração com dApps**
 
-* **Consulta de saldos**
+- **Consulta de saldos**
 
-* **Operações de mint e burn controladas**
+- **Operações de mint e burn controladas**
 
 Alguns casos de uso comuns para o BRZ incluem:
 
 ### DeFi
 
-* **Pools de liquidez**
+- **Pools de liquidez**
 
 ### Pagamentos
 
-* **Transferências P2P**
+- **Transferências P2P**
 
-* **Integrações comerciais**
+- **Integrações comerciais**
 
-* **Remessas internacionais**
+- **Remessas internacionais**
 
-* **Pagamentos em dApps**
+- **Pagamentos em dApps**
