--- a/brz_flow/BRZ-pt.mdx
+++ b/brz_flow/BRZ-pt.mdx
@@ -1,5 +1,5 @@
 ---
-title: "BRZ na Flow 🇦🇷 🇨🇱"
+title: "BRZ na Flow 🇧🇷"
 description: "Guia completo sobre a stablecoin brasileira BRZ na Flow blockchain"
 ---
 
