--- a/brz_flow/BRZ-en.mdx
+++ b/brz_flow/BRZ-en.mdx
@@ -1,5 +1,5 @@
 ---
-title: "BRZ on Flow 🇧🇷"
+title: "BRZ on Flow 🇺🇸"
 description: "Complete guide on the Brazilian stablecoin BRZ on the Flow blockchain"
 ---
 
